--- a/ebay/Views/Product/Index.cshtml
+++ b/ebay/Views/Product/Index.cshtml
@@ -1,1 +1,117 @@
-﻿<h1>This is Product page.</h1>
+﻿
+
+@using ebay.ViewModel
+@model ProductSearch
+
+<div class="container">
+
+
+    <form>
+        <div class="row pt-3">
+            <div class="col-6">
+                <h1 class="text-primary">Product List</h1>
+            </div>
+            <div class="col-3">
+                <input asp-for="Name" type="text" placeholder="e.g. Iphone" class="form-control">
+            </div>
+            <div class="col-1">
+                <button class="btn btn-primary">
+                    Search
+                </button>
+            </div>
+            <div class="col-2">
+                <a asp-controller="Product" asp-action="Add" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i> Add New Product
+                </a>
+            </div>
+        </div>
+    </form>
+
+    <table class="table table-bordered table-striped text-center">
+        <thead>
+
+            <tr>
+                <td>
+                    <h5>
+                        Product Name
+                    </h5>
+                </td>
+                <td>
+                    <h5>
+                        Description
+                    </h5>
+                </td>
+
+                <td>
+                    <h5>
+                        Price
+                    </h5>
+                </td>
+                <td>
+                    <h5>
+                        Brand
+                    </h5>
+                </td>
+
+                <td>
+                    <h5>
+                        Quantity
+                    </h5>
+                </td>
+                <td>
+                    <h5>
+                        Color
+                    </h5>
+                </td>
+                <td>
+                    <h5>
+                        Action
+                    </h5>
+                </td>
+            </tr>
+        </thead>
+
+        <tbody>
+            @foreach (var data in Model.Data)
+            {
+                <tr>
+                    <td>
+                        @data.Name
+                    </td>
+
+                    <td>
+                        @data.Description
+                    </td>
+                    <td>
+                        @data.Price
+                    </td>
+
+                    <td>
+                        @data.Brand
+                    </td>
+                    <td>
+                        @data.Quantity
+                    </td>
+
+                    <td>
+                        @data.Color
+                    </td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a class="btn btn-primary mx-2" asp-controller="Product" asp-action="Edit" asp-route-id="@data.id">
+                                <i class="bi bi-pencil"></i> Edit
+                            </a>
+                            <a class="btn btn-danger mx-2" asp-controller="Product" asp-action="Delete" asp-route-id="@data.id">
+                                <i class="bi bi-trash"></i> Delete
+                            </a>
+
+                        </div>
+                    </td>
+
+                </tr>
+            }
+        </tbody>
+
+    </table>
+
+</div>
