--- a/ebay/Views/Product/Edit.cshtml
+++ b/ebay/Views/Product/Edit.cshtml
@@ -40,7 +40,7 @@
                         <button type="submit" class="btn btn-primary form-control">Update</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-controller="Category" asp-action="index" class="btn btn-secondary border form-control">
+                        <a asp-controller="Product" asp-action="Index" class="btn btn-secondary border form-control">
                             Back
                         </a>
                     </div>
