--- a/ebay/Views/Product/Add.cshtml
+++ b/ebay/Views/Product/Add.cshtml
@@ -12,6 +12,12 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3 row">
+                <label asp-for="CategoryId" class="form-label"></label>
+                <select asp-for="CategoryId"  asp-items="@Model.CategoryList" class="form-select">
+                    <option disabled selected>--select category--</option>
+                </select>
+        </div>
+        <div class="mb-3 row">
             <label asp-for="Description" class="form-label"></label>
             <input asp-for="Description" class="form-control" id="DisplayOrder">
             <span asp-validation-for="Description" class="text-danger"></span>
