add categoryId in Index

--- a/ebay/Views/Product/Index.cshtml
+++ b/ebay/Views/Product/Index.cshtml
@@ -65,6 +65,11 @@
                 </td>
                 <td>
                     <h3>
+                        Category
+                    </h3>
+                </td>
+                <td>
+                    <h3>
                         Action
                     </h3>
                 </td>
@@ -95,6 +100,9 @@
 
                     <td>
                         @data.Color
+                    </td>
+                    <td>
+                        @data.CategoryId
                     </td>
                     <td>
                         <div class="w-75 btn-group" role="group">
