add category dropdown
add foreign key of category in product for dropdown

--- a/ebay/Views/Product/Add.cshtml
+++ b/ebay/Views/Product/Add.cshtml
@@ -12,6 +12,12 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3 row">
+            <label asp-for="CategoryId" class="form-lable"></label>
+            <select class="form-select" asp-for="CategoryId" asp-items="@Model.CategoryList()">
+                <option disabled selected>--SELECT CATEGORY--</option>
+            </select>
+        </div>
+        <div class="mb-3 row">
             <label asp-for="Description" class="form-label"></label>
             <input asp-for="Description" class="form-control" id="DisplayOrder">
             <span asp-validation-for="Description" class="text-danger"></span>
