--- a/ebay/Views/Product/Index.cshtml
+++ b/ebay/Views/Product/Index.cshtml
@@ -102,7 +102,7 @@
                         @data.Color
                     </td>
                     <td>
-                        @data.CategoryId
+                        @data.Category.Name
                     </td>
                     <td>
                         <div class="w-75 btn-group" role="group">
