--- a/ebay/Views/Shared/_Layout.cshtml
+++ b/ebay/Views/Shared/_Layout.cshtml
@@ -1370,5 +1370,7 @@
       });
       // @@formatter:on
     </script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+     @await Component.InvokeAsync("Notyf")
 </body>
 </html>
