--- a/ebay/Views/Product/Index.cshtml
+++ b/ebay/Views/Product/Index.cshtml
@@ -14,20 +14,19 @@
             <div class="col-2">
                 <input asp-for="Name" type="text" placeholder="e.g. Iphone" class="form-control">
             </div>
-            <div class="col-1">
+            <div class="col-2">
                 <button class="btn btn-primary">
                     <i class="bi bi-search"></i>&nbsp;Search
                 </button>
             </div>
-            <div class="col-3">
+            <div class="col-1">
                 <a asp-controller="Product" asp-action="Add" class="btn btn-primary">
                     <i class="bi bi-plus-circle"></i>&nbsp;Add New Product
                 </a>
             </div>
         </div>
-    </form>
 
-    <table class="table table-bordered table-striped text-center">
+    <table class="table table-bordered table-striped">
         <thead>
 
             <tr>
@@ -109,9 +108,10 @@
                             <a class="btn btn-primary mx-2" asp-controller="Product" asp-action="Edit" asp-route-id="@data.id">
                                 <i class="bi bi-pencil"></i>&nbsp; Edit
                             </a>
-                            <a href="@Url.Action("Delete",new {@data.id})" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash"></i>&nbsp; Delete
-                            </a>
+                            
+                             <button asp-action="Delete" asp-controller="Product" asp-route-id="@data.id" class="btn btn-danger mx-2">
+                                 <i class="bi bi-trash"></i>&nbsp; Delete
+                            </button>
 
                         </div>
                     </td>
@@ -122,4 +122,5 @@
 
     </table>
 
+    </form>
 </div>
