--- a/ebay/Views/Shared/_Layout.cshtml
+++ b/ebay/Views/Shared/_Layout.cshtml
@@ -1336,5 +1336,7 @@
       });
       // @@formatter:on
     </script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+     @await Component.InvokeAsync("Notyf")
      </body>
 </html>
