--- a/ebay/Views/Shared/_Layout.cshtml
+++ b/ebay/Views/Shared/_Layout.cshtml
@@ -155,6 +155,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
                             <span class="avatar avatar-sm" style="background-image: url(/assets/static/avatars/000m.jpg)"></span>
@@ -169,7 +170,8 @@
                             <a href="#" class="dropdown-item">Feedback</a>
                             <div class="dropdown-divider"></div>
                             <a href="./settings.html" class="dropdown-item">Settings</a>
-                            <a asp-action="LogIn" asp-controller="Auth" class="dropdown-item">Logout</a>
+                            @* <partial name="_LoginPartial"/> *@
+                            <a asp-action="LogOut" asp-controller="Auth" class="dropdown-item">Logout</a>
                         </div>
                     </div>
                 </div>
