--- a/ebay/Views/Auth/LogIn.cshtml
+++ b/ebay/Views/Auth/LogIn.cshtml
@@ -1,32 +1,57 @@
 @model ebay.ViewModel.AuthSignInVm
-<div class="row">
-    <div class="col-4">
-        <form method="post" class="card page page-center">
-            <div class="card-header">
-                <h5 class="card-title">
-                    Login
-                </h5>
-            </div>
-            <div class="card-body">
-                <div class="form-group">
-                    <label asp-for="Username"></label>
-                    <input asp-for="Username" type="text" class="form-control">
-                    <span asp-validation-for="Username" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password"></label>
-                    <input asp-for="Password" type="password" class="form-control" required>
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="card-footer">
-                <button class="btn btn-block btn-success">
-                    Sign in!
-                </button>
-                <button class="btn btn-block btn-success">
-                    Sign up!
-                </button>
-            </div>
-        </form>
+<form method="post" class="w-25 page-center">
+  <!-- Email input -->
+  <div class="form-outline mb-4">
+    <input type="email" asp-for="Username" class="form-control " />
+    <label class="form-label" asp-for="Username"></label>
+  </div>
+
+  <!-- Password input -->
+  <div class="form-outline mb-4">
+    <input type="password" asp-for="Password" class="form-control " />
+    <label class="form-label" asp-for="Password"></label>
+  </div>
+
+  <!-- 2 column grid layout for inline styling -->
+  <div class="row mb-4">
+    <div class="col d-flex justify-content-center">
+      <!-- Checkbox -->
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="form2Example34" checked />
+        <label class="form-check-label" for="form2Example34"> Remember me </label>
+      </div>
     </div>
-</div>
+
+    <div class="col">
+      <!-- Simple link -->
+      <a href="#!">Forgot password?</a>
+    </div>
+  </div>
+
+  <!-- Submit button -->
+  <div class="d-flex justify-content-center mb-0">
+
+    <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+  </div>
+
+  <!-- Register buttons -->
+  <div class="text-center">
+    <p>Not a member? <a asp-action="Registration" asp-controller="Auth">Register</a></p>
+    <p>or sign up with:</p>
+    <button type="button" class="btn btn-secondary btn-floating mx-1">
+      <i class="fab fa-facebook-f"></i>
+    </button>
+
+    <button type="button" class="btn btn-secondary btn-floating mx-1">
+      <i class="fab fa-google"></i>
+    </button>
+
+    <button type="button" class="btn btn-secondary btn-floating mx-1">
+      <i class="fab fa-twitter"></i>
+    </button>
+
+    <button type="button" class="btn btn-secondary btn-floating mx-1">
+      <i class="fab fa-github"></i>
+    </button>
+  </div>
+</form>
