--- a/ebay/Views/Auth/LogIn.cshtml
+++ b/ebay/Views/Auth/LogIn.cshtml
@@ -1,57 +1,62 @@
 @model ebay.ViewModel.AuthSignInVm
-<form method="post" class="w-25 page-center">
-  <!-- Email input -->
-  <div class="form-outline mb-4">
-    <input type="email" asp-for="Username" class="form-control " />
-    <label class="form-label" asp-for="Username"></label>
-  </div>
+<div class="container">
+    <div class="row justify-content-center">
+        @* <div class="col-12"> *@
+            <form method="post" class="w-25">
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                    <input type="email" asp-for="Username" class="form-control " required />
+                    <label class="form-label" asp-for="Username"></label>
+                </div>
 
-  <!-- Password input -->
-  <div class="form-outline mb-4">
-    <input type="password" asp-for="Password" class="form-control " />
-    <label class="form-label" asp-for="Password"></label>
-  </div>
+                <!-- Password input -->
+                <div class="form-outline mb-4">
+                    <input type="password" asp-for="Password" class="form-control " required />
+                    <label class="form-label" asp-for="Password"></label>
+                </div>
 
-  <!-- 2 column grid layout for inline styling -->
-  <div class="row mb-4">
-    <div class="col d-flex justify-content-center">
-      <!-- Checkbox -->
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="form2Example34" checked />
-        <label class="form-check-label" for="form2Example34"> Remember me </label>
-      </div>
+                <!-- 2 column grid layout for inline styling -->
+                <div class="row mb-4">
+                    <div class="col d-flex justify-content-center">
+                        <!-- Checkbox -->
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="form2Example34" checked />
+                            <label class="form-check-label" for="form2Example34"> Remember me </label>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <!-- Simple link -->
+                        <a href="#!">Forgot password?</a>
+                    </div>
+                </div>
+
+                <!-- Submit button -->
+                <div class="d-flex justify-content-center mb-0">
+                    <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+                </div>
+
+                <!-- Register buttons -->
+                <div class="text-center">
+                    <p>Not a member? <a asp-action="Registration" asp-controller="Auth">Register</a></p>
+                    @* <p>or sign up with:</p>
+                    <button type="button" class="btn btn-secondary btn-floating mx-1">
+                        <i class="fab fa-facebook-f"></i>
+                    </button>
+
+                    <button type="button" class="btn btn-secondary btn-floating mx-1">
+                        <i class="fab fa-google"></i>
+                    </button>
+
+                    <button type="button" class="btn btn-secondary btn-floating mx-1">
+                        <i class="fab fa-twitter"></i>
+                    </button>
+
+                    <button type="button" class="btn btn-secondary btn-floating mx-1">
+                        <i class="fab fa-github"></i>
+                    </button> *@
+                </div>
+            </form>
+        @* </div> *@
     </div>
-
-    <div class="col">
-      <!-- Simple link -->
-      <a href="#!">Forgot password?</a>
-    </div>
-  </div>
-
-  <!-- Submit button -->
-  <div class="d-flex justify-content-center mb-0">
-
-    <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-  </div>
-
-  <!-- Register buttons -->
-  <div class="text-center">
-    <p>Not a member? <a asp-action="Registration" asp-controller="Auth">Register</a></p>
-    <p>or sign up with:</p>
-    <button type="button" class="btn btn-secondary btn-floating mx-1">
-      <i class="fab fa-facebook-f"></i>
-    </button>
-
-    <button type="button" class="btn btn-secondary btn-floating mx-1">
-      <i class="fab fa-google"></i>
-    </button>
-
-    <button type="button" class="btn btn-secondary btn-floating mx-1">
-      <i class="fab fa-twitter"></i>
-    </button>
-
-    <button type="button" class="btn btn-secondary btn-floating mx-1">
-      <i class="fab fa-github"></i>
-    </button>
-  </div>
-</form>
+</div>
