--- a/ebay/Views/Auth/LogIn.cshtml
+++ b/ebay/Views/Auth/LogIn.cshtml
@@ -33,7 +33,7 @@
 
                 <!-- Submit button -->
                 <div class="d-flex justify-content-center mb-0">
-                    <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+                    <button type="submit" class="btn btn-primary btn-block mb-4">sign-in</button>
                 </div>
 
                 <!-- Register buttons -->
