--- a/ebay/Views/Auth/Registration.cshtml
+++ b/ebay/Views/Auth/Registration.cshtml
@@ -41,7 +41,11 @@
 
             <!-- Submit button -->
             <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary btn-block mb-4">Sign up</button>
+                <button type="submit" class="btn btn-primary btn-block mb-4">sign-up</button>
+            </div>
+            <!-- sign in buttons -->
+            <div class="text-center">
+                    <p>Already have an account? <a asp-action="LogIn" asp-controller="Auth">sign-in</a></p>
             </div>
 
             <!-- Register buttons -->
