--- a/ebay/Views/Shared/_Layout.cshtml
+++ b/ebay/Views/Shared/_Layout.cshtml
@@ -18,7 +18,8 @@
     <link href="/assets/dist/css/tabler-flags.min.css?1684106062" rel="stylesheet" />
     <link href="/assets/dist/css/tabler-payments.min.css?1684106062" rel="stylesheet" />
     <link href="/assets/dist/css/tabler-vendors.min.css?1684106062" rel="stylesheet" />
-    <link href="/assets/dist/css/demo.min.css?1684106062" rel="stylesheet" />
+    <link href="/assets/dist/css/demo.min.css?1684106062" rel="stylesheet" />    
+    
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
       @@import url('https://rsms.me/inter/inter.css');
@@ -159,8 +160,11 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
                             <span class="avatar avatar-sm" style="background-image: url(/assets/static/avatars/000m.jpg)"></span>
+                            
                             <div class="d-none d-xl-block ps-2">
-                                <div>Paweł Kuna</div>
+                                <div>
+                                    <partial name="_LoginPartial"/>
+                                </div>
                                 <div class="mt-1 small text-muted">UI Designer</div>
                             </div>
                         </a>
@@ -170,7 +174,6 @@
                             <a href="#" class="dropdown-item">Feedback</a>
                             <div class="dropdown-divider"></div>
                             <a href="./settings.html" class="dropdown-item">Settings</a>
-                            @* <partial name="_LoginPartial"/> *@
                             <a asp-action="LogOut" asp-controller="Auth" class="dropdown-item">Logout</a>
                         </div>
                     </div>
