refactor public layout

--- a/ebay/Views/Shared/_Layout.cshtml
+++ b/ebay/Views/Shared/_Layout.cshtml
@@ -185,7 +185,6 @@
 
                                  <a asp-action="LogOut" asp-controller="Auth" class="dropdown-item">Log-out</a>
                                 }
-
                             }
                         </div>
                     </div>
@@ -615,7 +614,7 @@
             
             <div class="page-body">
                 <div class="container-xl">
-                   @RenderBody();
+                   @RenderBody()
                 </div>
             </div>
             <footer class="footer footer-transparent d-print-none">
