--- a/ebay/Views/Auth/LogIn.cshtml
+++ b/ebay/Views/Auth/LogIn.cshtml
@@ -1,7 +1,16 @@
+@{
+    Layout = "_publicLayout";
+}
 @model ebay.ViewModel.AuthSignInVm
-<div class="container">
+<div class="container mt-5 pt-5">
     <div class="row justify-content-center">
-        @* <div class="col-12"> *@
+        @* <div class="col-12"> *@ 
+            @if (!string.IsNullOrEmpty(Model.ErrorMessage))
+        {
+            <div class="alert alert-danger">
+                @Model.ErrorMessage
+            </div>
+        }
             <form method="post" class="w-25">
                 <!-- Email input -->
                 <div class="form-outline mb-4">
