--- a/ebay/Views/Auth/Registration.cshtml
+++ b/ebay/Views/Auth/Registration.cshtml
@@ -1,5 +1,8 @@
+@{
+    Layout="_publicLayout";
+}
 @model ebay.ViewModel.AuthRegisterVm;
-<div class="container">
+<div class="container mt-5 pt-5">
     <div class="row justify-content-center">
         @* <div class="col-6"> *@
         <form method="post" class="w-25">
