--- a/ebay/Areas/Admin/Views/Auth/LogIn.cshtml
+++ b/ebay/Areas/Admin/Views/Auth/LogIn.cshtml
@@ -47,7 +47,7 @@
 
                 <!-- Register buttons -->
                 <div class="text-center">
-                    <p>Not a member? <a asp-action="Registration" asp-controller="Auth">Register</a></p>
+                    <p>Not a member? <a asp-action="Registration" asp-controller="Auth" asp-area="Admin">Register</a></p>
                     @* <p>or sign up with:</p>
                     <button type="button" class="btn btn-secondary btn-floating mx-1">
                         <i class="fab fa-facebook-f"></i>
