--- a/ebay/Areas/Admin/Views/Auth/Registration.cshtml
+++ b/ebay/Areas/Admin/Views/Auth/Registration.cshtml
@@ -48,7 +48,7 @@
             </div>
             <!-- sign in buttons -->
             <div class="text-center">
-                    <p>Already have an account? <a asp-action="LogIn" asp-controller="Auth">sign-in</a></p>
+                    <p>Already have an account? <a asp-action="LogIn" asp-controller="Auth" asp-area="Admin">sign-in</a></p>
             </div>
 
             <!-- Register buttons -->
