--- a/ebay/Views/Shared/_publicLayout.cshtml
+++ b/ebay/Views/Shared/_publicLayout.cshtml
@@ -24,6 +24,7 @@
 		rel="stylesheet">
 	<link href="/Public/css/tiny-slider.css" rel="stylesheet">
 	<link href="/Public/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 	<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
 </head>
 
