--- a/ebay/Views/Shared/_publicNav.cshtml
+++ b/ebay/Views/Shared/_publicNav.cshtml
@@ -1,89 +1,95 @@
 @using ebay.Provider.Interface
 @inject ICurrentUserProvider _currentUserProvider
-    <!-- Start Header/Navigation -->
-	<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
+<!-- Start Header/Navigation -->
+<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
-		<div class="container">
-			<a class="navbar-brand" href="index.html">Furni<span>.</span></a>
+	<div class="container">
+		<a class="navbar-brand" href="index.html">Furni<span>.</span></a>
 
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
-				aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
+			aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-			<div class="collapse navbar-collapse" id="navbarsFurni">
-				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li><a class="nav-link" href="shop.html">Shop</a></li>
-					<li><a class="nav-link" href="about.html">About us</a></li>
-					<li><a class="nav-link" href="services.html">Services</a></li>
-					<li><a class="nav-link" href="blog.html">Blog</a></li>
-					<li><a class="nav-link" href="contact.html">Contact us</a></li>
-				</ul>
+		<div class="collapse navbar-collapse" id="navbarsFurni">
+			<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li><a class="nav-link" href="shop.html">Shop</a></li>
+				<li><a class="nav-link" href="about.html">About us</a></li>
+				<li><a class="nav-link" href="services.html">Services</a></li>
+				<li><a class="nav-link" href="blog.html">Blog</a></li>
+				<li><a class="nav-link" href="contact.html">Contact us</a></li>
+			</ul>
 
-				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					
-					@* <div class="nav-item dropdown">
-						<a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
-                            <span class="avatar avatar-sm" style="background-image: url(/assets/static/avatars/000m.jpg)"></span>
-                            <div class="d-none d-xl-block ps-2">
-                                <div>Paweł Kuna</div>
-                                <div class="mt-1 small text-muted">UI Designer</div>
-                            </div>
-                        </a>
-						<div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-							<a href="#" class="dropdown-item">Status</a>
-							<a href="./profile.html" class="dropdown-item">Profile</a>
-							<a href="#" class="dropdown-item">Feedback</a>
-							<div class="dropdown-divider"></div>
-							<a href="./settings.html" class="dropdown-item">Settings</a>
-							<partial name="_LoginPartial"/>
-							<a asp-action="LogOut" asp-controller="Auth" class="dropdown-item">Logout</a>
-						</div>
-					</div> *@
-					<li style="margin-top:12px; margin-bottom:12px;">
-						<div class="nav-item dropdown">
-							<a href="#" class="nav-link d-flex lh-1 text-reset p-0 pl-3" data-bs-toggle="dropdown" aria-label="Open user menu">
-								<img src="/Public/images/user.svg">
-								<span class="avatar avatar-sm" style="background-image: url(/assets/static/avatars/000m.jpg)">
-										
-								</span>
-								
-								<div class="d-none d-xl-block ps-2 m-auto">
-									
-									<div>
-										<partial name="_LoginPartial"/>
-									</div>
+			<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+
+				@* <div class="nav-item dropdown">
+				<a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user
+				menu">
+				<span class="avatar avatar-sm" style="background-image: url(/assets/static/avatars/000m.jpg)"></span>
+				<div class="d-none d-xl-block ps-2">
+				<div>Paweł Kuna</div>
+				<div class="mt-1 small text-muted">UI Designer</div>
+				</div>
+				</a>
+				<div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+				<a href="#" class="dropdown-item">Status</a>
+				<a href="./profile.html" class="dropdown-item">Profile</a>
+				<a href="#" class="dropdown-item">Feedback</a>
+				<div class="dropdown-divider"></div>
+				<a href="./settings.html" class="dropdown-item">Settings</a>
+				<partial name="_LoginPartial"/>
+				<a asp-action="LogOut" asp-controller="Auth" class="dropdown-item">Logout</a>
+				</div>
+				</div> *@
+				<li style="margin-top:12px; margin-bottom:12px;">
+					<div class="nav-item dropdown">
+						<a href="#" class="nav-link d-flex lh-1 text-reset p-0 pl-3" data-bs-toggle="dropdown"
+							aria-label="Open user menu">
+							<img src="/Public/images/user.svg">
+							<span class="avatar avatar-sm"
+								style="background-image: url(/assets/static/avatars/000m.jpg)">
+
+							</span>
+
+							<div class="d-none d-xl-block ps-2 m-auto">
+
+								<div>
+									<partial name="_LoginPartial" />
 								</div>
-							</a>
-							<div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-								<div class="mt-1 small text-muted">
-										<img src="/Public/images/user.svg">
-									</div>
-								<a href="#" class="dropdown-item">Status</a>
-								<a href="./profile.html" class="dropdown-item">Profile</a>
-								<a href="#" class="dropdown-item">Feedback</a>
-								<div class="dropdown-divider"></div>
-								<a href="./settings.html" class="dropdown-item">Settings</a>
-								@{ var currentUser = await _currentUserProvider.GetCurrentUser();
-									if(currentUser==null){
-									<a asp-action="LogIn" asp-controller="Auth" asp-area="Admin" class="dropdown-item">Log-in</a>
-
-									}
-									else{
-
-									<a asp-action="LogOut" asp-controller="Auth" asp-area="Admin" class="dropdown-item">Log-out</a>
-									}
-								}
 							</div>
-                    	</div>
-					</li>
-					<li><a class="nav-link" href="cart.html"><img src="/Public/images/cart.svg"></a></li>
-				</ul>
-			</div>
-		</div>
+						</a>
+						<div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+							<div class="mt-1 small text-muted">
+								<img src="/Public/images/user.svg">
+							</div>
+							<a href="./profile.html" class="dropdown-item"><i class="fa-regular fa-user"></i> &nbsp My Profile</a>
+							<a href="./settings.html" class="dropdown-item"><i class="bi bi-box-seam"></i> &nbsp Orders</a>
+							<div class="dropdown-divider"></div>
+							@{
+								var currentUser = await _currentUserProvider.GetCurrentUser();
+								if (currentUser == null)
+								{
+									<a asp-action="LogIn" asp-controller="Auth" asp-area="Admin"
+										class="dropdown-item"><i class="fa-solid fa-arrow-right-to-bracket"></i>&nbsp Log-in</a>
 
-	</nav>
-	<!-- End Header/Navigation -->
+								}
+								else
+								{
+
+									<a asp-action="LogOut" asp-controller="Auth" asp-area="Admin"
+										class="dropdown-item"><i class="fa-solid fa-arrow-right-from-bracket"></i> &nbsp Log-out</a>
+								}
+							}
+						</div>
+					</div>
+				</li>
+				<li><a class="nav-link" href="cart.html"><img src="/Public/images/cart.svg"></a></li>
+			</ul>
+		</div>
+	</div>
+
+</nav>
+<!-- End Header/Navigation -->
