--- a/ebay/Areas/Admin/Views/Product/Index.cshtml
+++ b/ebay/Areas/Admin/Views/Product/Index.cshtml
@@ -54,17 +54,17 @@
 
                 <td>
                     <h3>
-                        Quantity
-                    </h3>
-                </td>
-                <td>
-                    <h3>
-                        Color
+                        Stock
                     </h3>
                 </td>
                 <td>
                     <h3>
                         Category
+                    </h3>
+                </td>
+                <td>
+                    <h3>
+                        ImageUrl
                     </h3>
                 </td>
                 <td>
@@ -94,14 +94,14 @@
                         @data.Brand
                     </td>
                     <td>
-                        @data.Quantity
+                        @data.Stock
                     </td>
 
                     <td>
-                        @data.Color
+                        @data.Category.Name
                     </td>
                     <td>
-                        @data.Category.Name
+                        @data.Product_image
                     </td>
                     <td>
                         <div class="w-75 btn-group" role="group">
