--- a/ebay/Areas/Admin/Views/Product/Add.cshtml
+++ b/ebay/Areas/Admin/Views/Product/Add.cshtml
@@ -3,55 +3,60 @@
 <h1>This is Add page</h1>
 
 <div class="container">
-    <form method="post">
-        
-        <div class="mb-3 row">
-            <label asp-for="Name" class="form-label"></label>
-            <input asp-for="Name" class="form-control" id="CategoryName">
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row">
-            <label asp-for="CategoryId" class="form-lable"></label>
-            <select class="form-select" asp-for="CategoryId" asp-items="@Model.CategoryList()">
-                <option disabled selected>--SELECT CATEGORY--</option>
-            </select>
-        </div>
-        <div class="mb-3 row">
-            <label asp-for="Description" class="form-label"></label>
-            <input asp-for="Description" class="form-control" id="DisplayOrder">
-            <span asp-validation-for="Description" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row">
-            <label asp-for="Brand" class="form-label"></label>
-            <input asp-for="Brand" class="form-control" id="CategoryName">
-            <span asp-validation-for="Brand" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row">
-            <label asp-for="Price" class="form-label"></label>
-            <input asp-for="Price" class="form-control" id="DisplayOrder">
-            <span asp-validation-for="Price" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row">
-            <label asp-for="Quantity" class="form-label"></label>
-            <input asp-for="Quantity" class="form-control" id="CategoryName">
-            <span asp-validation-for="Quantity" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row">
-            <label asp-for="Color" class="form-label"></label>
-            <input asp-for="Color" class="form-control" id="DisplayOrder">
-            <span asp-validation-for="Color" class="text-danger"></span>
-
-        </div>
+    <form method="post" enctype="multipart/form-data">
         <div class="row">
-            <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Add</button>
+            <div class="col-10">
+                <div class="mb-3 row">
+                    <label asp-for="Name" class="form-label"></label>
+                    <input asp-for="Name" class="form-control">
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row">
+                    <label asp-for="CategoryId" class="form-lable"></label>
+                    <select class="form-select" asp-for="CategoryId" asp-items="@Model.CategoryList()">
+                        <option disabled selected>--SELECT CATEGORY--</option>
+                    </select>
+                </div>
+                <div class="mb-3 row">
+                    <label asp-for="Description" class="form-label"></label>
+                    <input asp-for="Description" class="form-control">
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row">
+                    <label asp-for="Brand" class="form-label"></label>
+                    <input asp-for="Brand" class="form-control">
+                    <span asp-validation-for="Brand" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row">
+                    <label asp-for="Price" class="form-label"></label>
+                    <input asp-for="Price" class="form-control">
+                    <span asp-validation-for="Price" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row">
+                    <label asp-for="Stock" class="form-label"></label>
+                    <input asp-for="Stock" class="form-control" id="CategoryName">
+                    <span asp-validation-for="Stock" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row">
+                    <label asp-for="Product_image" class="form-label"></label>
+                    <input type="file" class="form-control">
+                </div>
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <button type="submit" class="btn btn-primary form-control">Add</button>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="Product" asp-action="Index" class="btn btn-secondary border form-control">
+                            Back
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="col-6 col-md-3">
-                <a asp-controller="Product" asp-action="Index" class="btn btn-secondary border form-control">
-                    Back
-                </a>
+            <div class="col-2">
+
             </div>
         </div>
+
 
     </form>
 </div>
